[tool.poetry]
name = "mlxplain"
version = "0.0.0"
description = "An open platform for accelerating the development of eXplainable AI systems"
authors = ["Arthur Babey <arthur.babey@heig-vd.ch>", "Jean-Marc Boutay <jean-marc.boutay@heige.ch>", "Rémy Marquis <remy.marquis@heig-vd.ch>"]
license = "3-Clause BSD License"
readme = "README.md"
packages = [{include = "mlxplain"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
black = "^23.3.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc-typehints = "^1.22"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.idea
)/
'''
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
