[project]
name = "mlxplain"
version = "0.0.0"
description = "An open platform for accelerating the development of eXplainable AI systems"
license = {text = "3-Clause BSD License" }
authors = [
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" },
    { name = "Jean-Marc Boutay", email = "jean-marc.boutay@heige.ch" },
    { name = "Rémy Marquis", email = "remy.marquis@heig-vd.ch" }
]
dependencies = [
    "build>=1.0.3",
]
readme = "README.md"
requires-python = ">= 3.8.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "black>=23.9.1",
    "coverage>=7.3.1",
    "sphinx>=6.3.1",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.22",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mlxplain"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.idea
)/
'''
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
