[project]
name = "mlxplain"
version = "1.0.4"
description = "An open platform for accelerating the development of eXplainable AI systems"
license = {text = "3-Clause BSD License" }
authors = [
    { name = "Arthur Babey", email = "arthur.babey@heig-vd.ch" },
    { name = "Jean-Marc Boutay", email = "jean-marc.boutay@heige.ch" },
    { name = "Rémy Marquis", email = "remy.marquis@heig-vd.ch" }
]
dependencies = [
    "build>=1.0.3",
    "flake8>=7.1.0",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "coverage>=7.5.4",
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.3",
    "omnixai-community>=1.3.2.2",
    "dash>=2.17.1",
    "jupyter-dash>=0.4.2",
    "dash-bootstrap-components>=1.6.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "rules-extraction>=0.1.1",
]
readme = "README.md"
homepage = "https://hes-xplain.github.io/"
repository = "https://github.com/HES-XPLAIN/rules-extraction"
keywords = ["machine learning", "xai"]
classifiers=[
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3',
]
requires-python = ">= 3.9.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mlxplain"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.idea
)/
'''
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
